--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
           </h1>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ea,
-          laudantium hic ducimus nostrum vel eos? Beatae optio non provident,
-          laboriosam dolore nostrum sunt quos necessitatibus illo totam cumque
-          modi.
+          Kawasaki has been at the forefront of innovation and engineering
+          excellence for decades, delivering high-performance motorcycles that
+          embody power, precision, and reliability. Known for their cutting-edge
+          technology and bold designs, Kawasaki bikes offer an unparalleled
+          riding experience. From adrenaline-fueled sport bikes to rugged
+          off-road machines, Kawasaki continues to set the standard for
+          performance and versatility in the world of motorcycles.
         </p>
 
         <div class="boximg">
